src/compiletest/lcell-01.stderr
error[E0599]: no method named `clone` found for struct `LCellOwner` in the current scope
 --> $DIR/lcell-01.rs:8:29
  |
8 |         let owner2 = owner1.clone(); // Compile fail
  |                             ^^^^^ method not found in `LCellOwner<'_>`
